quotes/static/assets/buttons.css
.DateRangePickerInput{
	background-color: transparent;
	border: 0px;
	color: #000000;
	text-align: center;
}

.DateInput{
	background-color: transparent;
}

/* restyle radio items */
.radio-group .form-check {
	padding-left: 0;
}
  
.radio-group .btn-group > .form-check:not(:last-child) > .btn {
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
}
  
.radio-group .btn-group > .form-check:not(:first-child) > .btn {
border-top-left-radius: 0;
border-bottom-left-radius: 0;
margin-left: -1px;
}

